// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CxProgress customize 1`] = `
<div>
  <div
    class="progress bazinga"
    style="height: 100px;"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="progress-bar warning"
      role="progressbar"
      style="width: 50%;"
    >
      Test
    </div>
  </div>
</div>
`;

exports[`loads and displays CxProgress component 1`] = `
<div>
  <div
    class="progress"
  >
    Test
  </div>
</div>
`;
